--- a/style.css
+++ b/style.css
@@ -1,26 +1,25 @@
-
 .header {
   display: flex;
-	align-content: space-around;
+  align-content: space-around;
   justify-content: center;
   width: 100%;
-	min-height: 50px;
-	background-color: #4677ff;
-	border-radius: 25px;
+  min-height: 50px;
+  background-color: #4677ff;
+  border-radius: 25px;
 }
 
 .ul {
   display: flex;
-	flex-flow: wrap;
+  flex-flow: wrap;
   justify-content: space-around;
-	width: 100%;
+  width: 100%;
 }
 
-.ul_start{
-	align-items: flex-start;
+.ul_start {
+  align-items: flex-start;
 }
-.ul_rowWrap{
-	flex-flow: row wrap;
+.ul_rowWrap {
+  flex-flow: row wrap;
 }
 
 ul li {
@@ -56,7 +55,7 @@ button:focus {
   margin-bottom: 20px;
   background-color: lightblue;
   border: 1px solid blue;
-	cursor: pointer;
+  cursor: pointer;
   transition: all 0.5s ease-out;
 }
 
@@ -77,8 +76,8 @@ button:focus {
   display: none;
 }
 .bigCard {
-  height: 400px;
-  width: 300px;
+  min-height: 400px;
+  min-width: 300px;
 }
 .S {
   height: 32px;
